Solves day 5 part 1

--- a/day5/crane.ipynb
+++ b/day5/crane.ipynb
@@ -26,6 +26,7 @@
    "source": [
     "import os\n",
     "from dataclasses import dataclass\n",
+    "from typing import Dict\n",
     "from typing import List\n",
     "from enum import auto\n",
     "from enum import Enum\n"
@@ -229,13 +230,13 @@
    "outputs": [],
    "source": [
     "def build_stacks_from_crates(labels : List[str], crate_rows: List[List[Crate|None]]) -> List[Stack]:\n",
-    "  stacks : List[Stack] = [Stack(name=label, contents=[]) for label in labels]\n",
+    "  stacks : Dict[Stack] = {label: [] for label in labels}\n",
     "  for row in crate_rows:\n",
-    "    for stack, crate in zip(stacks, row):\n",
+    "    for stack, crate in zip(stacks.values(), row):\n",
     "      if crate is not None:\n",
-    "        stack.contents.append(crate)\n",
-    "  for stack in stacks:\n",
-    "    stack.contents.reverse()\n",
+    "        stack.append(crate)\n",
+    "  for stack in stacks.values():\n",
+    "    stack.reverse()\n",
     "  return stacks"
    ]
   },
@@ -245,7 +246,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_data(filename : str):\n",
+    "def load_data(filename : str) -> Dict[int, List[Crate]]:\n",
     "  \"\"\" Data file lines:\n",
     "    * Crates from top to bottom\n",
     "    * A number under each complete stack\n",
@@ -305,11 +306,11 @@
      "output_type": "stream",
      "text": [
       "testdata/tiny.txt\n",
-      "([Stack(name=1, contents=[[G]]), Stack(name=2, contents=[])], [m 1 f 1 t 2, m 1 f 2 t 1, m 1 f 1 t 2])\n",
+      "({1: [[H], [G]], 2: [[F]]}, [m 1 f 1 t 2, m 1 f 2 t 1, m 1 f 1 t 2])\n",
       "testdata/small.txt\n",
-      "([Stack(name=1, contents=[[D], [R], [V], [G]]), Stack(name=2, contents=[[T], [B], [V], [H], [S]]), Stack(name=4, contents=[[M], [N]]), Stack(name=5, contents=[[J], [N], [F]])], [m 3 f 1 t 4, m 1 f 4 t 2, m 4 f 4 t 5, m 2 f 5 t 1])\n",
+      "({1: [[W], [D], [R], [V], [G]], 2: [[X], [T], [B], [V], [H], [S]], 4: [[Y], [M], [N]], 5: [[Z], [J], [N], [F]]}, [m 3 f 1 t 4, m 1 f 4 t 2, m 4 f 4 t 5, m 2 f 5 t 1])\n",
       "testdata/sample.txt\n",
-      "([Stack(name=1, contents=[[D], [L], [J], [R], [V], [G], [F]]), Stack(name=2, contents=[[T], [P], [M], [B], [V], [H], [J], [S]]), Stack(name=3, contents=[[V], [H], [M], [F], [D], [G], [P], [C]]), Stack(name=4, contents=[[M], [D], [P], [N], [G], [Q]]), Stack(name=5, contents=[[J], [L], [H], [N], [F]]), Stack(name=6, contents=[[N], [F], [V], [Q], [D], [G], [T], [Z]]), Stack(name=7, contents=[[F], [D], [B], [L]]), Stack(name=8, contents=[[M], [J], [B], [S], [V], [D], [N]]), Stack(name=9, contents=[[G], [L], [D]])], [m 3 f 4 t 6, m 1 f 5 t 8, m 3 f 7 t 3, m 4 f 5 t 7, m 1 f 7 t 8, m 3 f 9 t 4, m 2 f 8 t 2, m 4 f 4 t 5, m 2 f 5 t 1])\n"
+      "({1: [[D], [L], [J], [R], [V], [G], [F]], 2: [[T], [P], [M], [B], [V], [H], [J], [S]], 3: [[V], [H], [M], [F], [D], [G], [P], [C]], 4: [[M], [D], [P], [N], [G], [Q]], 5: [[J], [L], [H], [N], [F]], 6: [[N], [F], [V], [Q], [D], [G], [T], [Z]], 7: [[F], [D], [B], [L]], 8: [[M], [J], [B], [S], [V], [D], [N]], 9: [[G], [L], [D]]}, [m 3 f 4 t 6, m 1 f 5 t 8, m 3 f 7 t 3, m 4 f 5 t 7, m 1 f 7 t 8, m 3 f 9 t 4, m 2 f 8 t 2, m 4 f 4 t 5, m 2 f 5 t 1])\n"
      ]
     }
    ],
@@ -326,23 +327,144 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "def perform_moves(stacks: Dict[int, List[Crate]], moves: List[Move]):\n",
+    "  for move in moves:\n",
+    "    crates = stacks[move.source][-move.count:]\n",
+    "    crates.reverse()\n",
+    "    stacks[move.destination] += crates\n",
+    "    del stacks[move.source][-move.count:]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "incomplete input (846359989.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[13], line 2\u001b[0;36m\u001b[0m\n\u001b[0;31m    \u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m incomplete input\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: [[m], [n]], 2: [[a], [b], [c], [o]]}\n",
+      "{1: [[m]], 2: [[a], [b], [c], [o], [n]]}\n",
+      "{1: [[m], [n], [o], [c], [b]], 2: [[a]]}\n",
+      "{1: [[m], [n], [o]], 2: [[a], [b], [c]]}\n",
+      "{1: [[m], [n], [o]], 2: [[a], [b], [c]]}\n",
+      "{1: [[m], [n], [o]], 2: [[a], [b], [c]]}\n"
      ]
     }
    ],
    "source": [
-    "def perform_moves(stacks: List[Stack], moves: List[Move]):\n",
-    "  for move in moves:\n",
-    "    pass\n",
-    "    # take move.count crates from the end of stack[move.source] \n",
-    "    # reverse the list of crates being moved\n",
-    "    # stack[move.destination].append the list of crates being moved"
+    "def exercise_perform_moves():\n",
+    "    def starting_stacks():\n",
+    "        return {\n",
+    "            1 : [Crate('m'), Crate('n'), Crate('o')],\n",
+    "            2 : [Crate('a'), Crate('b'), Crate('c')]\n",
+    "        }\n",
+    "\n",
+    "    all_moves = [\n",
+    "        [Move(1, 1, 2)],\n",
+    "        [Move(3, 1, 2), Move(1, 2, 1)],\n",
+    "        [Move(3, 2, 1), Move(1, 1, 2)],\n",
+    "        [Move(1, 2, 1), Move(1, 1, 2)],\n",
+    "        [Move(3, 2, 1), Move(3, 1, 2)],\n",
+    "        [Move(3, 2, 1), Move(3, 1, 2), Move(1, 2, 1), Move(2, 1, 2), Move(1, 2, 1)]\n",
+    "    ]\n",
+    "    for moves in all_moves:\n",
+    "        stacks = starting_stacks()\n",
+    "        perform_moves(stacks, moves)\n",
+    "        print(stacks)\n",
+    "\n",
+    "exercise_perform_moves()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def stack_tops(stacks):\n",
+    "    letter = lambda x : '0' if len(x) == 0 else x[-1].name\n",
+    "    return ''.join([letter(s) for s in stacks.values()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solver(filename = 'input.txt'):\n",
+    "    stacks, moves = load_data(filename)\n",
+    "    perform_moves(stacks, moves)\n",
+    "    return stack_tops(stacks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "testdata/tiny.txt\n",
+      "start {1: [[H], [G]], 2: [[F]]}\n",
+      "end {1: [[H]], 2: [[F], [G]]}\n",
+      " HG\n",
+      "testdata/small.txt\n",
+      "start {1: [[W], [D], [R], [V], [G]], 2: [[X], [T], [B], [V], [H], [S]], 4: [[Y], [M], [N]], 5: [[Z], [J], [N], [F]]}\n",
+      "end {1: [[W], [D], [M], [N]], 2: [[X], [T], [B], [V], [H], [S], [R]], 4: [[Y]], 5: [[Z], [J], [N], [F], [V], [G]]}\n",
+      " NRYG\n",
+      "testdata/sample.txt\n",
+      "start {1: [[D], [L], [J], [R], [V], [G], [F]], 2: [[T], [P], [M], [B], [V], [H], [J], [S]], 3: [[V], [H], [M], [F], [D], [G], [P], [C]], 4: [[M], [D], [P], [N], [G], [Q]], 5: [[J], [L], [H], [N], [F]], 6: [[N], [F], [V], [Q], [D], [G], [T], [Z]], 7: [[F], [D], [B], [L]], 8: [[M], [J], [B], [S], [V], [D], [N]], 9: [[G], [L], [D]]}\n",
+      "end {1: [[D], [L], [J], [R], [V], [G], [F], [P], [D]], 2: [[T], [P], [M], [B], [V], [H], [J], [S], [J], [F]], 3: [[V], [H], [M], [F], [D], [G], [P], [C], [L], [B], [D]], 4: [[M], [D]], 5: [[G], [L]], 6: [[N], [F], [V], [Q], [D], [G], [T], [Z], [Q], [G], [N]], 7: [[F], [N], [H], [L]], 8: [[M], [J], [B], [S], [V], [D], [N]], 9: []}\n",
+      " DFDDLNLN0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def exercise_solver():\n",
+    "  for f in get_test_filenames():\n",
+    "    print(f'{f}')\n",
+    "    stacks, moves = load_data(f)\n",
+    "    print(f'start {stacks}')\n",
+    "    perform_moves(stacks, moves)\n",
+    "    print(f'end {stacks}')\n",
+    "    print(f' {solver(f)}')\n",
+    "\n",
+    "exercise_solver()\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'QMBMJDFTD'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solver()"
    ]
   }
  ],
