Day 6 part 1 done.

--- a/day5/crane.ipynb
+++ b/day5/crane.ipynb
@@ -329,10 +329,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def perform_moves(stacks: Dict[int, List[Crate]], moves: List[Move]):\n",
+    "def perform_moves(stacks: Dict[int, List[Crate]], moves: List[Move], reverse: bool=True):\n",
     "  for move in moves:\n",
     "    crates = stacks[move.source][-move.count:]\n",
-    "    crates.reverse()\n",
+    "    if reverse:\n",
+    "      crates.reverse()\n",
     "    stacks[move.destination] += crates\n",
     "    del stacks[move.source][-move.count:]\n"
    ]
@@ -396,9 +397,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def solver(filename = 'input.txt'):\n",
+    "def solver(filename = 'input.txt', reverse=True):\n",
     "    stacks, moves = load_data(filename)\n",
-    "    perform_moves(stacks, moves)\n",
+    "    perform_moves(stacks, moves, reverse=reverse)\n",
     "    return stack_tops(stacks)"
    ]
   },
@@ -444,7 +445,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Solution"
+    "# Solution - part 1"
    ]
   },
   {
@@ -465,6 +466,36 @@
    ],
    "source": [
     "solver()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Solution - part 2\n",
+    "\n",
+    "In part 2 we find that the crane moves all the crates at once. So we don't reverse the order when they're moved."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'NBTVTJNFJ'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solver(reverse=False)"
    ]
   }
  ],
