Day 6 part 2 complete.

--- a/day6/marker.ipynb
+++ b/day6/marker.ipynb
@@ -45,18 +45,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def find_marker(input : str) -> int:\n",
-    "    last_four : List[str] = input[0:4]\n",
-    "    for i, c in enumerate(input):\n",
+    "def two_in_a_row(input: str):\n",
+    "    last = input[0]\n",
+    "    for i in input[1:]:\n",
+    "        if last == i:\n",
+    "            return True\n",
+    "        last = i\n",
+    "    return False\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "two_in_a_row('aacd')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_marker(input : str, marker_length : int = 4) -> int:\n",
+    "    last_four : List[str] = input[0:marker_length]\n",
+    "    for i, c in enumerate(input[marker_length:]):\n",
     "        comp = sorted(last_four)\n",
-    "        if (comp[0] != comp[1] \n",
-    "            and comp[1] != comp[2] \n",
-    "            and comp[2] != comp[3]):\n",
-    "            return i\n",
+    "        if not two_in_a_row(comp):\n",
+    "            return i + marker_length\n",
     "        last_four = last_four[1:]\n",
     "        last_four += c\n",
     "    return -1"
@@ -64,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +130,7 @@
        "[4]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,18 +142,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def solve(filename: str = 'input.txt') -> int:\n",
+    "def solve(filename: str = 'input.txt', marker_length: int = 4) -> int:\n",
     "    with open(filename) as f:\n",
-    "        return find_marker(f.read().strip())"
+    "        return find_marker(f.read().strip(), marker_length)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Solution for part 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -129,13 +170,50 @@
        "1198"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "solve()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Solution for part 2\n",
+    "\n",
+    "Part 2 has the same requirements but needs 14 characters instead of 4.\n",
+    "\n",
+    "examples:\n",
+    "\n",
+    "* `bvwbjplbgvbhsrlpgdmjqwftvncz`: first marker after character **5**\n",
+    "* `nppdvjthqldpwncqszvftbrmjlhg`: first marker after character **6**\n",
+    "* `nznrnfrfntjfmvfwmzdfjlvtqnbhcprsg`: first marker after character **10**\n",
+    "* `zcfzfwzzqfrljwzlrfnpqdbhtmscgvjw`: first marker after character **11**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3120"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solve('input.txt', marker_length=14)"
    ]
   },
   {
