--- a/day7/device.ipynb
+++ b/day7/device.ipynb
@@ -102,7 +102,13 @@
     "    name : str\n",
     "    parent : Optional[Node]\n",
     "    size : Optional[int]\n",
-    "    contents : Optional[Dict[Node]]\n"
+    "    contents : Optional[Dict[Node]]\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return f'{self.name} {self.size}'\n",
+    "    \n",
+    "    def __lt__(self, other: Node):\n",
+    "        return self.size < other.size\n"
    ]
   },
   {
@@ -233,8 +239,8 @@
     "    cdir.contents['cfile1'] = Node('cfile1', cdir, 20, None)\n",
     "    cdir.contents['cfile2'] = Node('cfile2', cdir, 30, None)\n",
     "    ddir = Node('ddir', root, None, {})\n",
-    "    ddir.contents['dfile1'] = Node('dfile1', cdir, 2, None)\n",
-    "    ddir.contents['dfile2'] = Node('dfile2', cdir, 3, None)\n",
+    "    ddir.contents['dfile1'] = Node('dfile1', ddir, 2, None)\n",
+    "    ddir.contents['dfile2'] = Node('dfile2', ddir, 3, None)\n",
     "    root.contents['ddir'] = ddir\n",
     "    print(f'{node_sum(root)}')\n",
     "\n",
@@ -313,6 +319,79 @@
    ],
    "source": [
     "summer('input.txt')\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Part 2\n",
+    "\n",
+    "* Total space is **70000000**\n",
+    "* Need empty space of at least **30000000**\n",
+    "\n",
+    "1. Find total space used _U_\n",
+    "2. Find free space _F_ = 70000000 - _U_\n",
+    "3. Find additional space to clear _A_ = 30000000 - _F_\n",
+    "\n",
+    "_A_ = 30000000 - (70000000 - _U_)\n",
+    "\n",
+    "_A_ = _U_ - 40000000\n",
+    "\n",
+    "Find the smallest directory that, if deleted, would free up enough space on the filesystem to run the update. What is the total size of that directory?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def space_to_clear(root: Node):\n",
+    "  return node_sum(root) - 40_000_000\n",
+    "\n",
+    "def smallest_larger_than(start: Node, comp: Node, target_size: int) -> Node:\n",
+    "  \"\"\"\" Finds the smallest node under `start` which is larger than `target_size`.\n",
+    "  Return the smaller of that node and `comp`. \n",
+    "  \"\"\"\n",
+    "  if start.size < target_size:\n",
+    "    return comp\n",
+    "  if start.contents is None:\n",
+    "    if start < comp:\n",
+    "      return start\n",
+    "    return comp\n",
+    "  minimum = start\n",
+    "  for n in start.contents.values():\n",
+    "    minimum = smallest_larger_than(n, minimum, target_size)\n",
+    "  return min(minimum, start)\n",
+    "\n",
+    "def find_min_directory():\n",
+    "  root = load_data('input.txt')\n",
+    "  print(f'Space used: {node_sum(root)}')\n",
+    "  target_size = space_to_clear(root)\n",
+    "  print(f'Space to clear: {target_size}')\n",
+    "  minimum = smallest_larger_than(root, root, target_size)\n",
+    "  return minimum\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Space used: 46552309\n",
+      "Space to clear: 6552309\n",
+      "tjhzggs 8474158\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(find_min_directory())"
    ]
   }
  ],
